fix scrollbar issue

--- a/src/App.css
+++ b/src/App.css
@@ -43,6 +43,24 @@
   }
 }
 
+
+/* Scrollbar */
+::-webkit-scrollbar {
+  width: 0;
+  height: 0;
+}
+
+::-webkit-scrollbar-thumb {
+  background: #1a1f2a;
+  border-radius: 16px;
+  box-shadow: inset 2px 2px 2px hsla(0,0%,100%,.25),inset -2px -2px 2px rgba(0,0,0,.25);
+}
+
+::-webkit-scrollbar-track {
+  /* background: linear-gradient(90deg,#434343,#434343 1px,#111 0,#111); */
+  box-shadow: inset 1px 1px 10px rgba(0,0,0,0.5);
+}
+
 body {
   margin: 0;
   line-height: normal;
@@ -126,7 +144,7 @@ button:disabled {
   right: 0;
   background-color: var(--color-white);
   /* width: calc(100% - 340px); */
-  height: 100vh;
+  height: -webkit-fill-available;
   padding: 65px 100px;
   overflow: auto;
 }
